css/home.css
/* style sheet for my personal website */

/* need to fix white-space between html and body on mobile site.
* need to fix footer scrolling w page on mobile */
html, body, main {
  font-family: "Courier New", Courier, sans-serif;
  height: 100%; /* fill page */
  margin: 0px;
  padding: 0px;
  background-color: black;
}

/**
*
*  LEFT SIDE
*
*
**/
/* this panel contains my name, short description of me, social links */
@media only screen and (min-width: 813px) { /* browser sized support */
  .left_panel {
    float: left;
    width: 40%;
    height: 100%;
    background-image: url("https://cdn131.picsart.com/233812892065202.jpg?r1024x1024");
    color: white;
    text-align: center;
    position: fixed; /* static left panel */
  }
}
@media only screen and (max-width: 812px) { /* mobile support */
  .left_panel {
    height: 100%; /* this is iffy since it kicks the right panel out of the main and body */
    background-image: url("https://cdn131.picsart.com/233812892065202.jpg?r1024x1024");
    color: white;
    text-align: center;
  }
}
/* short list of myself, also affects footer */
.left_panel ul {
  list-style-type: none; /* remove bullets*/
  padding-left: 0; /* remove list item indentation */
}

/* social media icons */
footer {
  position: absolute; /* place footer on bottom of left panel */
  bottom: 1em; /* also helps place footer on bottom of left panel */
  width: 100%; /* also helps place footer on bottom of left panel */
}
footer li {
  display: inline; /* horizontal list */
}
.fa {
    padding: 1em;
    font-size: 1em;
    width: 30px;
    text-align: center;
    text-decoration: none;
    border-radius: 50%; /* 50% makes circles, 20% makes rounded squares */
    transition: .5s; /* fade into transparency */
}
.fa:hover {
  opacity: 0.7;
}
.fa-envelope-o {
  background: #4885ed;
  color: white;
}
.fa-github {
  background: black;
  color: white;
}
.fa-linkedin {
  background: #0077B5;
  color: white;
}
.fa-youtube {
  background: #ff0000;
  color: white;
}
.fa-file-text-o {
  background: #00cc66;
  color: white;
}




/**
*
*  RIGHT SIDE
*
*
**/
/* this panel contains my blog posts and about-me section */
@media only screen and (min-width: 813px) { /* desktop suppport */
  .right_panel {
    float: right;
    width: 60%;
    height: 100%;
    background-color: #EFEFEF;
  }
}
@media only screen and (max-width: 812px) { /* mobile support */
  .right_panel {
    background-color: #EFEFEF;
    height: 100%;
  }
}
.right_panel a {
  text-decoration: none; /* remove underline from links */
}
#About {
  text-align: center;
}
/* Style the tab */
.tab { /* this is the nav bar */
    overflow: hidden;
    background-color: inherit;
    /*position: fixed; /* stick nav bar to top while scrolling, REMOVED for mobile support */
    /*z-index: 1; /* keep nav bar on top of posts (tabcontent) */
    height: 5%; /* nav bar size */
    text-align: center;
    padding: 1em;
}
/* Style the buttons that are used to open the tab content */
.tab button {
    background-color: inherit;
    border: none;
    outline: none;
    cursor: pointer;
    transition: 0.3s;
    font-family: inherit;
    font-size: large;
    font-weight: bold;
    height: 100%;
    width: 33%; /* three tabs, each gets 1/3 of the 60% of the right panel width. Oddly, its not 33%... */
}
/* Change background color of buttons on hover */
.tab button:hover {
    text-decoration: underline;
}
/* Create an active/current tablink class */
.tab button.active {
    text-decoration: underline;
}
/* Style the tab content */
.tabcontent { /* this is the posts section */
    display: none;
    padding: 0 1em;
    animation: fadeEffect 0.5s; /* Fading effect takes 1 second */
}
/* Go from zero to full opacity */
@keyframes fadeEffect {
    from {opacity: 0;}
    to {opacity: 1;}
}
.blog_post {
  opacity: .6;
  padding: 0 1em;
  background-color: #D3D3D3;
}
.blog_post:hover {
  opacity: 1;
  background-color: #C0C0C0;
}
.blog_post img {
  width: 7em;
  height: auto;
  border-radius: 50%; /* circle photos */
  float: right;
}

